--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,31 +1,30 @@
 <div class="slider">
-  <div class="slide">
-    <div class="slide-bg">
-      <img
-        src="https://image.tmdb.org/t/p/original/vjnLXptqdxnpNJer5fWgj2OIGhL.jpg"
-        alt="img"
-      />
-    </div>
-    <div class="slide-pane">
-      <h2 class="name">Memory</h2>
-      <div class="meta">
-        <div class="info">
-          <span class="rating"
-            ><span>str</span><span class="rating-value">7.5</span
-            ><span>/10</span></span
-          >
-          <span>123 reviews</span>
-          <span>2022</span>
+  <ng-container *ngFor="let item of items; let i = index">
+    <div class="slide" @slideFade *ngIf="i == slideCounter">
+      <div class="slide-bg">
+        <img
+          class="slide-bg-image"
+          [src]="'https://image.tmdb.org/t/p/original/' + item.backdrop_path"
+          alt="img"
+        />
+      </div>
+      <div class="slide-pane">
+        <h2 class="name">{{ item.title }}</h2>
+        <div class="meta">
+          <div class="info">
+            <span class="rating"
+              ><span class="app-icon">star</span
+              ><span class="rating-value">{{ item.vote_average }}</span
+              ><span>/10</span></span
+            >
+            <span> {{ item.popularity }}reviews</span>
+            <span>{{ item.release_date }}</span>
+          </div>
+        </div>
+        <div class="description">
+          {{ item.overview }}
         </div>
       </div>
-      <div class="description">
-        Alex, an assassin-for-hire, finds that he's become a target after he
-        refuses to complete a job for a dangerous criminal organization. With
-        the crime syndicate and FBI in hot pursuit, Alex has the skills to stay
-        ahead, except for one thing: he is struggling with severe memory loss,
-        affecting his every move. Alex must question his every action and whom
-        he can ultimately trust.
-      </div>
     </div>
-  </div>
+  </ng-container>
 </div>
