Refactor Code With Banner fixed

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,3 @@
-<footer>© {{ date | date: "yyyy" }} Ethio Rentals All Rights Reserved</footer>
+<footer>
+  <span>© {{ date | date: 'yyyy' }} NgMovies All rights reserved.</span>
+</footer>
