--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,27 +1,23 @@
 <div class="slider">
   <ng-container *ngFor="let item of items; let i = index">
-    <div class="slide" @slideFade *ngIf="i == slideCounter">
+    <div class="slide" *ngIf="i == currentSlideIndex" @slideFade>
       <div class="slide-bg">
-        <img
-          class="slide-bg-image"
-          [src]="'https://image.tmdb.org/t/p/original/' + item.backdrop_path"
-          alt="img"
-        />
+        <img class="slide-bg-image" [src]="imagesSizes.large + item.backdrop_path" [alt]="item.title" />
       </div>
       <div class="slide-pane">
         <h2 class="name">{{ item.title }}</h2>
         <div class="meta">
           <div class="info">
-            <span class="rating"
-              ><span class="app-icon">star</span
-              ><span class="rating-value">{{ item.vote_average }}</span
-              ><span>/10</span></span
-            >
-            <span> {{ item.popularity }}reviews</span>
-            <span>{{ item.release_date }}</span>
+            <span class="rating">
+              <span class="app-icon">star</span>
+              <span class="rating-value">{{ item.vote_average }}</span>
+              <span>/10</span>
+            </span>
+            <span>{{ item.vote_count }}</span>
+            <span>{{ item.release_date | date: 'yyyy' }}</span>
           </div>
         </div>
-        <div class="description">
+        <div class="desc mt-6">
           {{ item.overview }}
         </div>
       </div>
