--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/colors";
+@import '../../../styles/colors';
 
 .slider {
   display: flex;
@@ -22,7 +22,7 @@
         bottom: 0;
         left: 0;
         display: block;
-        content: "";
+        content: '';
 
         background-image: linear-gradient(
           90deg,
@@ -56,7 +56,7 @@
           display: flex;
           > span {
             &:not(:last-child):after {
-              content: "|";
+              content: '|';
               margin-right: 9px;
               margin-left: 9px;
             }
@@ -77,7 +77,7 @@
         }
       }
 
-      .description {
+      .desc {
         font-size: 1.2rem;
         line-height: 1.6;
       }
