--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<slider [items]="movies"></slider>
+<slider [items]="popularMovies"></slider>
+<items-banner [items]="upcomingMovies" title="Upcoming Movies"></items-banner>
+<items-banner [items]="topRatedMovies" title="Top Rated Movies"></items-banner>
+<items-banner [items]="popularTvShows" title="Popular Tv Shows"></items-banner>
