--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,9 +1,9 @@
-@import "../../../styles/colors";
+@import '../../../styles/colors';
 
 footer {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding: 0.5rem 1rem;
   height: 65px;
   background-color: $bgColorLight;
