--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,4 +1,5 @@
-@import "../../../styles//colors";
+@import '../../../styles/colors';
+
 header {
   .navbar {
     display: flex;
@@ -16,6 +17,7 @@ header {
         width: 60px;
       }
     }
+
     &-links {
       display: block;
       padding: 0;
