Add Get Movie Method in the service and componenet

--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,12 +1,15 @@
 <ng-container *ngIf="itemData">
-  <a class="item">
+  <a class="item" [routerLink]="'/movie/' + itemData.id">
     <div class="item-rating">
       <i class="app-icon">star</i>
       <span>{{ itemData.vote_average }}</span
       >/10
     </div>
     <div class="item-image">
-      <img [src]="imagesSizes.medium + itemData.poster_path" [alt]="itemData.title" />
+      <img
+        [src]="imagesSizes.medium + itemData.poster_path"
+        [alt]="itemData.title"
+      />
     </div>
     <div class="item-title">{{ itemData.title }}</div>
   </a>
