--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -1,1 +1,3 @@
-<p>movie works!</p>
+<ng-container *ngIf="movie !== null">
+  <slider [items]="[movie]" [isBanner]="true"></slider>
+</ng-container>
