--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -1,16 +1,16 @@
-@import '../../../styles/colors';
+@import "../../../styles/colors";
 
 .slider {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 35rem;
+  height: 45rem;
   position: relative;
   .slide {
     position: absolute;
     width: 100%;
     display: flex;
-    height: 35rem;
+    height: 45rem;
     &-bg {
       position: relative;
       display: flex;
@@ -22,7 +22,7 @@
         bottom: 0;
         left: 0;
         display: block;
-        content: '';
+        content: "";
 
         background-image: linear-gradient(
           90deg,
@@ -56,7 +56,7 @@
           display: flex;
           > span {
             &:not(:last-child):after {
-              content: '|';
+              content: "|";
               margin-right: 9px;
               margin-left: 9px;
             }
