--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -1,3 +1,10 @@
 <ng-container *ngIf="movie !== null">
   <slider [items]="[movie]" [isBanner]="true"></slider>
 </ng-container>
+<div>
+  <p-tabView>
+    <p-tabPanel header="Header 1"> Content 1 </p-tabPanel>
+    <p-tabPanel header="Header 2"> Content 2 </p-tabPanel>
+    <p-tabPanel header="Header 3"> Content 3 </p-tabPanel>
+  </p-tabView>
+</div>
