--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,5 @@
 <footer>
-  <span>© {{ date | date: 'yyyy' }} NgMovies All rights reserved.</span>
+  <span
+    >© {{ date | date: "yyyy" }} EthioMovieReviews All rights reserved.</span
+  >
 </footer>
