--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -43,6 +43,14 @@
               {{ movie?.status }}
             </div>
           </div>
+          <div class="stat">
+            <div class="label">Genera:</div>
+            <div class="value">
+              <span *ngFor="let genera of movie?.genres">
+                {{ genera.name }}
+              </span>
+            </div>
+          </div>
         </div>
       </div>
     </p-tabPanel>
