Add movieVideos method

--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -3,7 +3,7 @@
 </ng-container>
 <div>
   <p-tabView>
-    <p-tabPanel header="Header 1">
+    <p-tabPanel header="overview">
       <div class="grid">
         <div class="col-12 md:col-3 lg:col-3">
           <img
@@ -54,7 +54,7 @@
         </div>
       </div>
     </p-tabPanel>
-    <p-tabPanel header="Header 2"> videos </p-tabPanel>
+    <p-tabPanel header="videos"> </p-tabPanel>
     <p-tabPanel header="Header 3"> Content 3 </p-tabPanel>
   </p-tabView>
 </div>
