Fix paginator css class to col-12

--- a/src/app/pages/movies/movies.component.html
+++ b/src/app/pages/movies/movies.component.html
@@ -4,7 +4,13 @@
       <item [itemData]="movie"></item>
     </div>
   </div>
-  <div>
-    <p-paginator [rows]="20" [totalRecords]="10000" (onPageChange)="paginate($event)" ></p-paginator>
+
+  <div class="grid">
+    <p-paginator
+      [rows]="20"
+      class="col-12"
+      [totalRecords]="10000"
+      (onPageChange)="paginate($event)"
+    ></p-paginator>
   </div>
 </div>
