--- a/src/app/components/embed-video/embed-video.component.html
+++ b/src/app/components/embed-video/embed-video.component.html
@@ -11,6 +11,6 @@
     ></iframe
   ></ng-container>
   <ng-container *ngSwitchCase="'Vimeo'">
-    <iframe width="500px" height="294px" [src]="movieUrl"></iframe>
+    <iframe width="100%" height="294px" [src]="movieUrl"></iframe>
   </ng-container>
 </ng-container>
