--- a/src/app/pages/movie-genres/movie-genres.component.scss
+++ b/src/app/pages/movie-genres/movie-genres.component.scss
@@ -3,8 +3,9 @@
   display: flex;
   width: 100%;
   height: 50px;
-  background-color: $bgColor;
+  background-color: $primaryColor;
   font-size: 1.6rem;
   justify-content: center;
   align-items: center;
+  color: black;
 }
